--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
         <p>I am a PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing and Human-AI Interaction. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
-        <p>I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the impacts of collective narratives (e.g., misinformation, harmful content, and counterspeech) and the role of generative AI in addressing or exacerbating related societal challenges.
+        <p>I adopt a theory-guided approach using quantitative and qualitative methods to understand the impacts of <strong class="project">collective narratives</strong> (e.g., misinformation, harmful content, and counterspeech) and the role of <strong class="project">generative AI</strong> in addressing or exacerbating related societal challenges.
         <!-- understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p> -->
+        <br>
 
-        <p>Combining theoretical power with machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and harmful content, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
+        Combining theoretical power with computational methods, I aspire to respond to real-world challenges, such as <strong>misinformation and harmful content, (mis)use of language models, support for vulnerable groups</strong>.</p>
+        <!-- machine learning, statistical analyses, and natural language processing methods -->
 
         <!-- <p>Apart from research, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p> -->
 
@@ -75,6 +77,10 @@
           Accepted by CHI Conference on Human Factors in Computing Systems.
           <br>
           <img src="assets/img/ai-misinfo.png">
+          <a target="_blank" class="collapsible">[<i class="fa-solid fa-message-plus"></i> Read Abstract]</a>
+          <div class="abstract">
+            Large language models have abilities in creating high-volume human-like texts and can be used to generate persuasive misinformation. However, the risks remain under-explored. To address the gap, this work first examined characteristics of AI-generated misinformation (AI-misinfo) compared with human creations, and then evaluated the applicability of existing solutions. We compiled human-created COVID-19 misinformation and abstracted it into narrative prompts for a language model to output AI-misinfo. We found significant linguistic differences within human-AI pairs, and patterns of AI-misinfo in enhancing details, communicating uncertainties, drawing conclusions, and simulating personal tones. While existing models remained capable of classifying AI-misinfo, a significant performance drop compared to   human-misinfo was observed. Results suggested that existing information assessment guidelines had questionable applicability, as AI-misinfo tended to meet criteria in evidence credibility, source transparency, and limitation acknowledgment. We discuss implications for practitioners, researchers, and journalists, as AI can create new challenges to the societal problem of misinformation.
+          </div>
         </p>
         <br>
 
@@ -87,6 +93,10 @@
           Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
           <br>
           <img src="assets/img/exergy_userstudy.png">
+          <a target="_blank" class="collapsible">[<i class="fa-solid fa-message-plus"></i> Read Abstract]</a>
+          <div class="abstract">
+            Energy harvesting reduces the burden of power source maintenance and promises to make computing systems genuinely ubiquitous. Researchers have made inroads in this area, but their novel energy harvesting materials and fabrication techniques remain inaccessible to the general maker communities. Therefore, this paper aims to provide a toolkit that makes energy harvesting accessible to novices. In Study 1, we investigate the challenges and opportunities associated with devising energy harvesting technology with experienced researchers and makers (N=9). Using the lessons learned from this investigation, we design a wind energy harvesting toolkit, Exergy, in Study 2. It consists of a simulator, hardware tools, a software example, and ideation cards. We apply it to vehicle environments, which have yet to be explored despite their potential. In Study 3, we conduct a two-phase workshop: hands-on experience and ideation sessions. The results show that novices (N=23) could use Exergy confidently and invent self-sustainable energy harvesting applications creatively.
+          </div>
         </p>
         <br>
 
@@ -113,6 +123,10 @@
           <u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
           Proceedings of the ACM on Human-Computer Interaction 6, no. CSCW1 (2022): 1-28.
           <img src="assets/img/vct.png">
+          <a target="_blank" class="collapsible">[<i class="fa-solid fa-message-plus"></i> Read Abstract]</a>
+            <div class="abstract">
+                Veterans are a unique marginalized group facing multiple vulnerabilities. Current assessments of veteran needs and support largely come from first-person accounts guided by researchers' prompts. Social media platforms not only enable veterans to connect with each other, but also to self-disclose experiences and seek support. This paper addresses the gap in our understanding of veteran needs and their own support dynamics by examining self-initiated and ecologically-valid self-expressions. In particular, we adopt the Veteran Critical Theory (VCT) to conduct a computational study on the Reddit community of veterans. Using topic modeling, we find veteran-friendly gestures with good intentions might not be appreciated in the subreddit. By employing transfer learning methodologies, we find this community has more informational and emotional support behaviors than general online communities and a higher prevalence of informational support than emotional support. Lastly, an examination of support dynamics reveals some contrasts to previous scholarship in military culture and social media. We discover that positive language and author platform tenure have negative relations with posts receiving replies and replies getting votes, and that replies reflecting personal disclosures tend to get more votes. Through the lens of VCT, we discuss how online communities can help uncover veterans' needs and provide more effective social support.
+            </div>
         </p>
         <br>
 
@@ -137,6 +151,10 @@
           In CHI Conference on Human Factors in Computing Systems (pp. 1-16).
           <br>
           <img src="assets/img/social.png">
+          <a target="_blank" class="collapsible">[<i class="fa-solid fa-message-plus"></i> Read Abstract]</a>
+          <div class="abstract">
+            Past research has demonstrated that accounts of trusted others can provide additional context into real world behavior relevant to clinical decision-making and patient engagement. Our research investigates the Social Sensing System, a concept which leverages trusted other feedback for veterans in therapy for PTSD. In our two phase study, we work with 10 clinicians to develop text-message queries and realistic scenarios to present to patients and trusted others. We then present the results in the form of a storyboard to 10 veterans with PTSD and 10 trusted others and gather feedback via semi-structured interview and survey. We find that while trusted other feedback may provide a unique and useful perspective, key design features and considerations of underlying relationships must be considered. We present our findings and utilize the mechanisms and conditions framework to assess the power dynamics of systems such as social sensing in the mental health realm.
+          </div>
         </p><br>
         
         <p class="pub">
@@ -160,6 +178,10 @@
           IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
           <br>
           <img src="assets/img/ppe.png">
+          <a target="_blank" class="collapsible">[<i class="fa-solid fa-message-plus"></i> Read Abstract]</a>
+          <div class="abstract">
+            Patient engagement is recognized as a key factor in promoting care quality and experience. Although patient portals as a prevalent information infrastructure provide a viable means to achieve engaging patients, there is still a limited understanding of how to objectively and systematically evaluate engagement levels in the context of patient portals. We develop the Patient Portal Engagement Framework (PPEF) to objectively and systematically evaluate patient portal engagement and demonstrated its utilization and effectiveness in two scenarios: portal utilization and user feedback. Four engagement levels included in the PPEF are - Inform Patients that allows patients to access health information; Involve Patients that encourages patients to take initiatives; Partner with Patients that supports long-term collaboration between patients and providers; and Support Ecology of Care that extends the scope beyond hospitals into personal and social factors. <br>We find more portal utilization and user feedback focus in lower levels of patient portal engagement (i.e., patients receiving information and taking active actions in managing care). Our thematic analysis of online user reviews reveals four core themes: conflicts between system and user views, evolving benefits and needs towards patient portals, debates about balancing emotional and informational needs, and reconsideration of power, accessibility, and privacy. We discuss how PPEF can help harvest and synthesize data from the system and user levels, as well as the design implications for patient portals. These results show that patient portals can be designed with practical guidance for engaging patients, complementing current efforts that focus on conceptualizing engagement or rely on psychometrics.
+          </div>
         </p>
 
         <br><br>
