--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 
         <p>I am a PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing and Human-AI Interaction. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
-        <p>I adopt a theory-guided approach using quantitative and qualitative methods to understand the impacts of <strong class="project">collective narratives</strong> (e.g., misinformation, harmful content, and counterspeech) and the role of <strong class="project">generative AI</strong> in addressing or exacerbating related societal challenges.
+        <p>I adopt a theory-guided approach using quantitative and qualitative methods to understand the impacts of <strong class="project">collective narratives</strong> (e.g., misinformation, harmful content, and counterspeech) and the role of <strong class="project">generative AI</strong> in addressing or exacerbating related societal challenges.</p>
         <!-- understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p> -->
-        <br>
 
-        Combining theoretical power with computational methods, I aspire to respond to real-world challenges, such as <strong>misinformation and harmful content, (mis)use of language models, support for vulnerable groups</strong>.</p>
+        <p>Combining theoretical power with computational methods, I aspire to respond to real-world challenges, such as <strong>misinformation and harmful content, (mis)use of language models, support for vulnerable groups</strong>.</p>
         <!-- machine learning, statistical analyses, and natural language processing methods -->
 
         <!-- <p>Apart from research, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p> -->
