update new paper

--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
         <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
 
         <p class="pub">
-          <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong>
+          <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
+          <strong>Jiawei Zhou</strong>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
+          Accepted by CHI Conference on Human Factors in Computing Systems.
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
           </div>
-          <u>Jiawei Zhou</u>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
-          Accepted by CHI Conference on Human Factors in Computing Systems.
-          <br>
           <img src="assets/img/ai-misinfo.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
           <div class="abstract">
@@ -84,13 +83,12 @@
         <br>
 
         <p class="pub">
-          <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong> 
+          <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong><br>
+          Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <strong>Jiawei Zhou</strong>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
+          Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/imwut23_exergy.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
           </div>
-          Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
-          Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
-          <br>
           <img src="assets/img/exergy_userstudy.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
           <div class="abstract">
@@ -100,7 +98,24 @@
         <br>
 
         <p class="pub">
-          <small>(CSCW 22)</small> <strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong>
+          <small>(ICHI 23)</small> <strong class="project">Characterizing the Users of Patient Portal Messaging: A Single Institutional Cohort Study</strong><br>
+          Ming Huang*, Aditya Khurana*, George Mastorakos*, <strong>Jiawei Zhou</strong>, Nansu Zong, Yue Yu, Julie E. Prigge, Christi A. Patten, Hongfang Liu, Brian A. Costello<br>
+          Accepted by IEEE International Conference on Healthcare Informatics.
+          <div>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="assets/ichi23_portal_user.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a> -->
+          </div>
+          <!-- <img src="assets/img/portal_user.png"> -->
+          <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
+          <div class="abstract">
+            This work studied message communications on patient portals and examined both the longitudinal trends and the correlations with characteristics of message senders. We analyzed over 5.6 million secure messages sent on the Mayo Clinic patient portal between February 18, 2010, and December 31, 2017. We studied the longitudinal changes in the number of portal messages, patient senders’ demographics and medical conditions (PheCodes), and provider senders’ care settings (e.g., primary or specialty) and practice roles (e.g., physician, nurse practitioner, and registered nurses). When compared to non-message-senders, patient message senders had a significantly higher proportion of the demographics: age 41-60, female, married, white, and English-speaking. From 2010-2017, an individual patient sent an average of 9.8 messages per person while a provider sent 418.4. The average number of PheCodes for all patients regardless of portal usage increased from 7.5 +/- 6.9 in 2010 to 10.7 +/- 10.1 in 2017. The Pearson correlation coefficient between average PheCodes per patient and average messages per patient was 0.273 (p < 0.0001). Physicians were the largest proportion of message composers in both primary and specialty care (36.20% of primary, 37.54% of specialty). Starting 2013 onwards, specialty providers comprised the majority of portal providers while primary care providers remained stable around 20-22%. Our results show that patient portals are playing an increasingly significant role in supporting patient-provider communications. The longitudinal growth also sheds light on the possible challenge of communication overload for providers and the healthcare system.
+          </div>
+        </p>
+        <br>
+
+        <p class="pub">
+          <small>(CSCW 22)</small> <strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong><br>
+          <strong>Jiawei Zhou</strong>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
+          Proceedings of the ACM on Human-Computer Interaction 6, no. CSCW1 (2022): 1-28.
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/cscw22_vct.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980">[<i class="fa fa-external-link-square"></i> DOI]</a>
@@ -119,8 +134,6 @@
                 }
             </div>
           </div>
-          <u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
-          Proceedings of the ACM on Human-Computer Interaction 6, no. CSCW1 (2022): 1-28.
           <img src="assets/img/vct.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
             <div class="abstract">
@@ -131,7 +144,9 @@
 
 
         <p class="pub">
-          <small>(CHI 22)</small> <strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong>
+          <small>(CHI 22)</small> <strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong><br>
+          Hayley I. Evans, Catherine R. Deeter, <strong>Jiawei Zhou</strong>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
+          In CHI Conference on Human Factors in Computing Systems (pp. 1-16).
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/chi22_trusted_other.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513">[<i class="fa fa-external-link-square"></i> DOI]</a>
@@ -146,9 +161,6 @@
                 }
             </div>
           </div>
-          Hayley I. Evans, Catherine R. Deeter, <u>Jiawei Zhou</u>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
-          In CHI Conference on Human Factors in Computing Systems (pp. 1-16).
-          <br>
           <img src="assets/img/social.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
           <div class="abstract">
@@ -157,7 +169,9 @@
         </p><br>
         
         <p class="pub">
-          <small>(ICHI 22)</small> <strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong>
+          <small>(ICHI 22)</small> <strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong><br>
+          <strong>Jiawei Zhou</strong>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
+          IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/ichi22_portal_engagement.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1109/ICHI54592.2022.00059">[<i class="fa fa-external-link-square"></i> DOI]</a>
@@ -173,9 +187,6 @@
                 }
             </div>
           </div>
-          <u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
-          IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
-          <br>
           <img src="assets/img/ppe.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
           <div class="abstract">
