--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
 
         <h2>NEWS</h2>
-        <!-- 📄📍📇🏅🎤🚩 -->
+        <!-- 📄📍📇🎤🚩 -->
         <ul>
-          <li>📄 <small>[Jan 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" got accepted to CHI2023! <i>(Top 7% of submissions)</i></li>
+          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" got Honorable Mention!</li>
           <li>🚩 <small>[Apr 2022]</small> I passed my PhD qualifier!</li>
           <li>📄 <small>[Dec 2021]</small> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" is accepted to CSCW!</li>
-          <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li>
+          <!-- <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li> -->
           <li>📇 <small>[May 2021]</small> Starting my summer research internship at Mayo Clinic Department of AI and Informatics</li>
         </ul>
         <br>
@@ -70,9 +70,21 @@
         <p class="pub">
           <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
           <strong>Jiawei Zhou</strong>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
-          Accepted by CHI Conference on Human Factors in Computing Systems.
+          Accepted by CHI Conference on Human Factors in Computing Systems.<br>
+          <strong class="project">🏅Honorable Mention</strong>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
+              <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> BIB]</a>
+              <div class="bibcontent">
+                  @inproceedings{zhou2023synthetic,<br>
+                  title={Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions},<br>
+                  author={Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},<br>
+                  booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},<br>
+                  pages={1--20},<br>
+                  year={2023}<br>
+                  }
+              </div>
           </div>
           <img src="assets/img/ai-misinfo.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
@@ -85,9 +97,24 @@
         <p class="pub">
           <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong><br>
           Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <strong>Jiawei Zhou</strong>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
-          Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
+          Proceedings of the ACM Interactive, Mobile, Wearable and Ubiquitous Technologies 7, no. 1 (2023): 1-28.
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/imwut23_exergy.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/imwut23_exergy.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3580814">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> BIB]</a>
+            <div class="bibcontent">
+                @article{park2023exergy,<br>
+                author = {Park, Jung Wook and Sun, Sienna Xin and Cheng, Tingyu and Yoo, Dong Whi and Zhou, Jiawei and Do, Youngwook and Abowd, Gregory D. and Arriaga, Rosa I.},<br>
+                title = {Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting},<br>
+                journal = {Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.},<br>
+                year = {2023},<br>
+                volume = {7},<br>
+                number = {1},<br>
+                pages = {1--28},<br>
+                publisher={ACM New York, NY, USA},<br>
+                url = {https://doi.org/10.1145/3580814}<br>
+                }
+            </div>
           </div>
           <img src="assets/img/exergy_userstudy.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
