--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
           <strong class="project">🏅Honorable Mention</strong>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-            <!-- <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
-              <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> BIB]</a>
-              <div class="bibcontent">
-                  @inproceedings{zhou2023synthetic,<br>
-                  title={Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions},<br>
-                  author={Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},<br>
-                  booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},<br>
-                  pages={1--20},<br>
-                  year={2023}<br>
-                  }
-              </div>
+            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> BIB]</a>
+            <div class="bibcontent">
+                @inproceedings{zhou2023synthetic,<br>
+                title={Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions},<br>
+                author={Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},<br>
+                booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},<br>
+                pages={1--20},<br>
+                year={2023}<br>
+                }
+            </div>
           </div>
           <img src="assets/img/ai-misinfo.png">
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
