--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>NEWS</h2>
         <!-- 📄📍📇🎤🚩 -->
         <ul>
-          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" got Honorable Mention!</li>
+          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received Honorable Mention!</li>
           <li>🚩 <small>[Apr 2022]</small> I passed my PhD qualifier!</li>
           <li>📄 <small>[Dec 2021]</small> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" is accepted to CSCW!</li>
           <!-- <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li> -->
@@ -69,9 +69,9 @@
 
         <p class="pub">
           <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
+          <strong class="project">🏅Honorable Mention</strong><br>
           <strong>Jiawei Zhou</strong>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
-          Accepted by CHI Conference on Human Factors in Computing Systems.<br>
-          <strong class="project">🏅Honorable Mention</strong>
+          Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (pp. 1-20).<br>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a>
@@ -231,9 +231,9 @@
 
       <footer>
 
-        <blockquote>
-          <p>If you can see, look.<br>If you can look, observe.</p>
-        </blockquote>     
+<!--         <blockquote>
+          <p></p>
+        </blockquote>  -->    
       </footer>
 
 
