--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <!-- 🎤Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.csiro.au/cybersecurity-quantum-systems/the-human-centric-ai-seminars-series/">CSIRO Human Centric AI Seminars</a><br> -->
           <!-- https://csiro.webex.com/recordingservice/sites/csiro/recording/1afe2d6ae174103bbf3f00505681a7d0/playback -->
           Gaurav Verma, Rynaa Grover, <strong>Jiawei Zhou</strong>, Binny Mathew, Jordan Kraemer, Munmun De Choudhury, Srijan Kumar<br>
-          Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers).<br>
+          Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) (pp.12672-12684).<br>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/acl24_violence_provoking_hate.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://aclanthology.org/2024.acl-long.684/">[<i class="fa fa-external-link-square"></i> DOI]</a>
