--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
         <br>
 
         <p class="pub">
-          <!-- <small class="venue"></small>  -->
-          <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
+          <small class="venue">CSCW'25</small> <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
           <strong>Jiawei Zhou</strong>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           Accepted to CSCW'25<br>
           <div>
@@ -133,12 +132,12 @@
 
 
         <p class="pub">
-          <!-- <small class="venue"></small>  -->
-          <strong class="project">"It's a conversation, not a quiz": A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health</strong><br>
+          <small class="venue">In review</small> <strong class="project">Risks of LLM Adoption in Health</strong><br>
           <strong>Jiawei Zhou</strong>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
-            <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2411.02594">[<i class="fa fa-external-link-square"></i> arXiv]</a>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a> -->
+            <!-- <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2411.02594">[<i class="fa fa-external-link-square"></i> arXiv]</a> -->
+            <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu">[<i class="fa fa-external-link-square"></i> Contact for preprint]</a>
             <!-- <a target="_blank" rel="noopener noreferrer" href="https://aclanthology.org/2024.acl-long.684/">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://claws-lab.github.io/violence-provoking-speech/">[<i class="fa fa-window-maximize"></i> Webpage]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
@@ -146,11 +145,11 @@
       
             </div> -->
           </div>
-          <img src="assets/img/llm_health.png">
-          <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
+          <!-- <img src="assets/img/llm_health.png"> -->
+          <!-- <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
           <div class="abstract">
             Recent breakthroughs in large language models (LLMs) have generated both interest and concern about their potential adoption as accessible information sources or communication tools across different domains. In public health -- where stakes are high and impacts extend across populations -- adopting LLMs poses unique challenges that require thorough evaluation. However, structured approaches for assessing potential risks in public health remain under-explored. To address this gap, we conducted focus groups with health professionals and health issue experiencers to unpack their concerns, situated across three distinct and critical public health issues that demand high-quality information: vaccines, opioid use disorder, and intimate partner violence. We synthesize participants' perspectives into a risk taxonomy, distinguishing and contextualizing the potential harms LLMs may introduce when positioned alongside traditional health communication. This taxonomy highlights four dimensions of risk in individual behaviors, human-centered care, information ecosystem, and technology accountability. For each dimension, we discuss specific risks and example reflection questions to help practitioners adopt a risk-reflexive approach. This work offers a shared vocabulary and reflection tool for experts in both computing and public health to collaboratively anticipate, evaluate, and mitigate risks in deciding when to employ LLM capabilities (or not) and how to mitigate harm when they are used.
-          </div>
+          </div> -->
         </p>
         <br>
 
